# RnD-Pedestrian-Detection

./: .cproject  .gitignore  CMakeLists.txt  README.md
Cascaded_Classifier/: CMakeLists.txt
Cascaded_Classifier/include/: CascadedClassifier.hpp
Cascaded_Classifier/src/: CascadedClassifier.cpp  main.cpp
Classifier/: CMakeLists.txt
Classifier/include/: AbstractClassifier.h  CascadedClassifier.h  debug.h
Classifier/src/: AbstractClassifier.cpp  CascadedClassifier.cpp  classifier_main.cpp
Detector/: CMakeLists.txt
Detector/include/: CascadedDetector.h  Detector.hpp
Detector/src/: CascadedDetector.cpp  Detector.cpp  main.cpp
Features/: .gitignore  CMakeLists.txt
Features/include/: FeatureEvaluator.h  hog_features.h
Features/scripts/: HOG_features.py  evaluate_hog.py  evaluate_hog_k_folds.py  genrate_hog_features.py
Features/src/: FeatureEvaluator.cpp  features_main.cpp  hog_features.cpp  hog_lite_features.cpp
Haar_features/: .gitignore  CMakeLists.txt
Haar_features/include/: cv_utils.h  haar_features.h
Haar_features/include/abstract_features/: features.h
Haar_features/src/: features.cpp  haar_features.cpp
bak/: features.cpp  haar_features.h
bak/abstract_features/: cv_utils.h  features.h
features/: CMakeLists.txt
features/include/: hog_features.h  hog_lite_features.h
features/scripts/: compare_hogs.py  evaluate_hog.py  evaluate_hog_FPPW.py  evaluate_hog_k_folds.py
features/src/: hog_features.cpp  hog_lite_features.cpp  main.cpp
imagelib_lite/: CMakeLists.txt
imagelib_lite/include/: ibinary.h  icolor.h  png_io.h
imagelib_lite/include/image_lib/: definitionImageLib.h  ierror_handling.h  image.h  ipixel_types.h  jpeg_io.h
imagelib_lite/src/: ibinary.cpp  icolor.cpp  ierror_handling.cpp  image.cpp  test.cpp
imagelib_lite/src/image_lib/: jpeg_io.cpp  png_io.cpp
include/: CascadedClassifier.hpp  debug.hpp
src/: CascadedClassifier.cpp  main.cpp
